--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get: ^4.6.6
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - lib/assets/fonts/
+    - lib/assets/images/aalok_logo_1_-removebg-preview.png
+    - lib/assets/images/Image 2.png
+  fonts:
+    - family: NicoMoji
+      fonts:
+        - asset: lib/assets/fonts/NicoMoji-Regular.ttf
+    - family: RubikGlitch
+      fonts:
+        - asset: lib/assets/fonts/RubikGlitch-Regular.ttf
+    
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -74,10 +89,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
