Added Member and Admin Login pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dev_dependencies:
 flutter:
   assets:
     - lib/assets/fonts/
-    - lib/assets/images/aalok_logo_1_-removebg-preview.png
-    - lib/assets/images/Image 2.png
+    - lib/assets/images/
+
   fonts:
     - family: NicoMoji
       fonts:
@@ -65,7 +65,9 @@ flutter:
     - family: RubikGlitch
       fonts:
         - asset: lib/assets/fonts/RubikGlitch-Regular.ttf
-    
+    - family: Rubik
+      fonts:
+        - asset: lib/assets/fonts/Rubik-SemiBold.ttf
 
 
   # The following line ensures that the Material Icons font is
