--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   flutter_svg: ^2.0.10+1
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
